# Splunk-Power-Client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  taskfile.yml
.github/workflows/: docs.yml  release.yml  test.yml
_mkdocs/hooks/: repo_info.py
_mkdocs/overrides/partials/: source.html
docs/: cheatsheet.md  configure_instances.md  custom_script.md  global_options.md  index.md  splunk_uri_scheme.md
docs/commands/: configs.md  instances.md  jobs.md  lookups.md
docs/stylesheets/: extra.css
src/splunk_power_client/: callbacks.py  exceptions.py  main.py  models.py  replay.py  settings.py  splunk_funny_quotes.txt  splunk_sdk_patch.py  table_views.py  tasks.py  utils.py
src/splunk_power_client/commands/: configs.py  control.py  ingest.py  instances.py  jobs.py  lookups.py  searches.py  secrets.py
tests/: test_lookups.py
tests/data/: test_dummy_alerts.csv
