[project]
name = "splunk-power-client"
version = "0.1.1"
description = "Splunk Power Client (SPC) is a Python module that provides spc command line to simplify the day-to-day tasks of Splunk users and administrators."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nicolas Rodrigues" },
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "dateparser>=1.2.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "splunk-sdk>=2.1.0",
    "tomli-w>=1.2.0",
    "trio>=0.32.0",
    "typer>=0.15.4",
]

[project.scripts]
spc = "splunk_power_client.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
    "go-task-bin>=3.43.3",
    "ipython>=9.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.2",
    "mkdocs-glightbox>=0.5.2",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.13",
]
docs = [
    "mkdocs-material>=9.6.14",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration: tests requiring a live Splunk instance (deselect with '-m \"not integration\"')",
]

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
tag_format = "v{version}"
commit_message = "chore(release): v{version} [skip ci]"
allow_zero_version = true

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.remote]
type = "github"
